Use more meaningful egg name
The egg name is used for the egg in site-packages, Package is a bit generic.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 requests
--e git+git://github.com/alphagov/backdrop-collector.git#egg=Package
+-e git+git://github.com/alphagov/backdrop-collector.git#egg=backdrop-collector
