--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 pytz==2013d # because pytz has stupid version names that don't work with pip 1.4
 requests==1.2.3
--e git+git://github.com/alphagov/backdrop-collector.git#egg=backdrop-collector
+-e git+https://github.com/alphagov/backdrop-collector.git#egg=backdrop-collector
